--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "",
     "build": "node scripts/build.js"
   },
   "eslintConfig": {
@@ -76,7 +76,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://chatojared06.github.io/TodoMachine",
+  "homepage": "/",
   "devDependencies": {
     "gh-pages": "^6.0.0"
   },
