--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/",
+  "homepage": "/TodoMachine/",
   "devDependencies": {
     "gh-pages": "^6.0.0"
   },
