--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
   "scripts": {
     "start": "node scripts/start.js",
     "predeploy": "npm run build",
-    "deploy": "",
+    "deploy": "gh-pages -d build",
     "build": "node scripts/build.js"
   },
   "eslintConfig": {
-    "extends": [                                
+    "extends": [
       "react-app"
     ]
   },
@@ -76,9 +76,9 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/TodoMachine/",
+  "homepage": "https://chatojared06.github.io/Todo-Machine",
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.1.1"
   },
   "jest": {
     "roots": [
